--- a/index.html
+++ b/index.html
@@ -8599,7 +8599,7 @@ Error message and password prompt
 <div created="20161125154419797" creator="R" modified="20231006170149023" modifier="Wil" title="$:/status/UserName">
 <pre>Will</pre>
 </div>
-<div created="20231006171227190" creator="Will" list="[[Magic the Gathering Card ID]]" modified="20231006171227190" modifier="Will" title="$:/StoryList">
+<div list="[[Magic the Gathering Card ID]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20161202114427326" creator="Riz" modified="20161210023540573" modifier="Riz" title="$:/temp/advancedsearch">
