--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@ Error message and password prompt
 
 <li>Magic the Gathering Card ID</li>
 
+<li>Magic the Gathering Fake Card ID</li>
+
 <li>Magic the Gathering Set Symbols</li>
 
 <li>Quote</li>
@@ -8599,7 +8601,7 @@ Error message and password prompt
 <div created="20161125154419797" creator="R" modified="20231006170149023" modifier="Wil" title="$:/status/UserName">
 <pre>Will</pre>
 </div>
-<div list="[[Magic the Gathering Card ID]]" title="$:/StoryList">
+<div list="[[Magic the Gathering Fake Card ID]] [[Magic the Gathering Card ID]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20161202114427326" creator="Riz" modified="20161210023540573" modifier="Riz" title="$:/temp/advancedsearch">
@@ -8879,6 +8881,11 @@ Cardboard Junkyard is unofficial Fan Content permitted under the Fan Content Pol
 
 
 [[WOTC License]]</pre>
+</div>
+<div created="20231006174143468" creator="Will" modified="20231006174421946" modifier="Will" tags="MTG TableOfContents" title="Magic the Gathering Fake Card ID" type="text/vnd.tiddlywiki">
+<pre>Came across a good post on reddit about identifying fake cards. This is the red-dot check. Not 100% but is a great start. 
+
+[img[images/fake.jpg]]</pre>
 </div>
 <div created="20231006171007911" creator="Will" modified="20231006171038823" modifier="Will" tags="TableOfContents" title="Magic the Gathering Set Symbols">
 <pre>[img [images/set_id/id_header.jpg]] 
