--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/plugin-info--270617185-$:/plugins/tesseract/Moments</li>
+
 <li>$:/state/popup-$:/state/plugin-info-77467299-$:/plugins/tesseract/Moments</li>
 
 <li>$:/state/showeditpreview</li>
@@ -8558,6 +8560,9 @@ Error message and password prompt
 <div created="20161124181605540" creator="Riz" modified="20231006170129098" modifier="Riz" title="$:/SiteTitle">
 <pre>Dirt Over Polish</pre>
 </div>
+<div created="20231006174547633" creator="Will" modified="20231006174549874" modifier="Will" title="$:/state/plugin-info--270617185-$:/plugins/tesseract/Moments">
+<pre>no</pre>
+</div>
 <div created="20161202124641518" creator="Riz" modified="20231006165106532" modifier="Riz" title="$:/state/popup-$:/state/plugin-info-77467299-$:/plugins/tesseract/Moments">
 <pre>yes</pre>
 </div>
@@ -8571,14 +8576,14 @@ Error message and password prompt
 <div created="20161202114434852" creator="Riz" modified="20161202114434853" modifier="Riz" title="$:/state/tab--1498284803">
 <pre>$:/core/ui/AdvancedSearch/Shadows</pre>
 </div>
-<div created="20161125024553422" modified="20161125030718268" title="$:/state/tab--1963855381">
-<pre>$:/tesseract/Moments/Options</pre>
+<div created="20161125024553422" creator="Will" modified="20231006174524138" modifier="Will" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20161124183925842" modified="20161124183925842" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20161124182216194" creator="Riz" modified="20231006170344143" modifier="Will" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20161124182216194" creator="Riz" modified="20231006174544368" modifier="Will" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20231006171337261" creator="Will" modified="20231006172108098" modifier="Will" title="$:/state/tab/moresidebar--1400711521">
 <pre>$:/core/ui/MoreSideBar/Recent</pre>
@@ -8882,10 +8887,10 @@ Cardboard Junkyard is unofficial Fan Content permitted under the Fan Content Pol
 
 [[WOTC License]]</pre>
 </div>
-<div created="20231006174143468" creator="Will" modified="20231006174421946" modifier="Will" tags="MTG TableOfContents" title="Magic the Gathering Fake Card ID" type="text/vnd.tiddlywiki">
+<div created="20231006174143468" creator="Will" modified="20231006175213284" modifier="Will" tags="MTG TableOfContents" title="Magic the Gathering Fake Card ID" type="text/vnd.tiddlywiki">
 <pre>Came across a good post on reddit about identifying fake cards. This is the red-dot check. Not 100% but is a great start. 
 
-[img[images/fake.jpg]]</pre>
+[img[images/reddit_fake.jpg]]</pre>
 </div>
 <div created="20231006171007911" creator="Will" modified="20231006171038823" modifier="Will" tags="TableOfContents" title="Magic the Gathering Set Symbols">
 <pre>[img [images/set_id/id_header.jpg]] 
